# brig

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: rust.yml
brig_client/: Cargo.toml
brig_client/src/: cli.rs  config.rs  main.rs
brig_common/: Cargo.toml
brig_common/src/: api.rs
brig_common/src/api/: api.rs  mod.rs  switch.rs  sync.rs
brig_server/: Cargo.toml  Dockerfile  status.json
brig_server/src/: api.rs  main.rs  sync_state.rs  utils.rs
brig_server/src/api/: clean.rs  mod.rs  status.rs  switch.rs  sync.rs
brig_server/src/config/: config.rs  dataset.rs  mod.rs  server.rs
src/: api.rs  cli.rs  main.rs
src/config/: dataset.rs  server.rs
