[package]
name = "snapshot_conductor_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
clap = {version = "4.5.21", features = ["derive"]}
openssh = "0.11.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full"]}
