[package]
name = "brig_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
brig_common = {path = "../brig_common"}
clap = {version = "4.5.21", features = ["derive"]}
reqwest = {version = "0.12.15", features = ["blocking"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
