[package]
name = "brig_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
brig_common = { path = "../brig_common" }
chrono = "0.4.41"
clap = {version = "4.5.21", features = ["derive"]}
openssh = "0.11.5"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full"]}
warp = "0.3.7"
